--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "python manage.py wait_for_db &&
+                      python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/code
     environment:
