--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ defusedxml==0.7.1
 Django==3.2.4
 django-allauth==0.44.0
 django-crispy-forms==1.12.0
+gunicorn==20.1.0
 idna==2.10
 oauthlib==3.1.1
+Pillow==8.2.0
 psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
@@ -18,3 +20,4 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
 urllib3==1.26.5
+whitenoise==5.2.0
